* Add missing semicolons, reduce multiple variable declarations, and remove wrongly placed commas. [Diego Perini]

* Add Fuse.Ajax.Request#abort method and ensure all XHR readyState events are fired once. [Prototype LH #124] [FuseJS LH #36] [Diego Perini, fearphage, jddalton, Mark Caudill]

* Change to HTML 4.01 Transitional doctype and escape closing tags in the source in the off chance that it is embeded in a page instead of an external js file. [jddalton]

* Make Fuse.String#truncate work with zero and null lengths. [jddalton]

* Optimize Fuse.String#camelize and cleanup Fuse.String#capitalize. [fearphage, jddalton]

* Fix incorrect usage of Fuse.String#unfilterJSON in Fuse.Ajax.Request#evalResponse and optimize Fuse.String#unfilterJSON and Fuse.String#isJSON. [jddalton, Samuel Lebeau]

* Fix IE6 try-catch-finally bug in Fuse.Timer class and unit tests. [Prototype LH #696] [jddalton, xucia, Yaffle]

* Changed the argument order in Form.TimedObserver and Field.TimedObserver to `element, callback, interval, options` for a more consistent API. [jddalton]
  Note: Backwards compatibility warning.

* Make Fuse.Timer() operate on milliseconds instead of seconds and allow setting the millisecond `multiplier` via an options object as the third argument. [FuseJS LH #26] [kitsg, jddalton, Joe Gornick]
  Note: Backwards compatibility warning.

* unit test: Fix minor Safari 2.x bugs in functional event tests.

* Rename Fuse.Ajax.Base and Fuse.Ajax.TimedUpdater `defaultOptions` object to `options` and fix options related bugs in Fuse.Ajax.TimedUpdater. [jddalton, Joe Gornick, kitsg]
  Note: Backwards compatibility warning.

* Add Ext.DomQuery support and allow the active css engine to be dynamically set in the unit tests. [jddalton]

* Ensure that Fuse.Object() converts native objects as well as primitives to Fuseboxed natives. [jddalton]

* Ensure `max` and `min` methods of Fuse.List and Fuse.Enumerable don't return augmented values when using callbacks. [jddalton]
